# movie-recommender

./: .env_template  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  Dockerfile.airflow  docker-compose.airflow.yml  environment.yml  justfile  pyproject.toml  requirements.txt  vercel.json
.circleci/: config.yml
backend/: app.py  config.py  main.py
backend/.dev_scripts/: harvest_data.py
backend/db/: pandas_db.parquet
backend/src/: app.py
backend/src/data_processing/: infer_db.py  infer_db_pd.py  web_scraping.py
backend/src/model/: dataloader.py  recommender.py
backend/tests/: test_dataloader.py
backend/utils/: config.py  model_size.py
dags/: ingestion_dag.py
frontend/: package.json
frontend/src/: App.tsx
models/: recommender_model.pth
sqitch/: sqitch.plan
sqitch/deploy/: 11102025_add_genre_column_to_movies.sql  19102025_create_extra_columns_to_movies_table.sql  21102025_add_constraints.sql  29012025_create_initial_schema.sql
sqitch/revert/: 11102025_add_genre_column_to_movies.sql  19102025_create_extra_columns_to_movies_table.sql  21102025_add_constraints.sql  29012025_create_initial_schema.sql
sqitch/verify/: 11102025_add_genre_column_to_movies.sql  19102025_create_extra_columns_to_movies_table.sql  21102025_add_constraints.sql  29012025_create_initial_schema.sql
src/: main.py  settings.py
src/api/: app.py  client.py  main.py
src/api_client/: main.py
src/etl/: ingestion.py  sql_queries.py
src/etl/generation/: generate.py  web_scraping.py
src/etl/ingestion/: ingest_movie_ratings.py  ingest_movies.py  ingest_usernames.py
src/etl/sql_queries/: queries.py
src/generation/: generate.py  web_scraping.py
src/ingestion/: infer_db.py  infer_db_pd.py  ingest_movie_ratings.py  ingest_usernames.py  web_scraping.py
src/model/: dataloader.py  evaluate.py  llm_rerank.py  recommender.py  train.py
src/schemas/: modelling.py  movie.py  movies.py  recommendation.py  users.py
src/sql_queries/: queries.py
src/types/: movies.py  users.py
src/utils/: model_size.py
tests/: conftest.py  docker-compose.yml  test-docker-compose.yml  test_dataloader.py  test_db.py  test_utils.py
tests/fixtures/films/movie-slug-1/: index.html
tests/fixtures/films/movie-slug-2/: index.html
tests/fixtures/films/popular/page/1/: index.html
tests/fixtures/members/popular/this/week/page/1/: index.html
tests/fixtures/testuser1/films/: index.html
tests/fixtures/testuser1/films/page/1/: index.html
tests/fixtures/testuser1/films/page/2/: index.html
tests/fixtures/testuser2/films/: index.html
tests/test_model/: test_dataloader.py  test_evaluate.py  test_recommender.py  test_train.py
tests/test_scraping/: conftest.py  test_movie_scraper.py  test_rating_scraper.py  test_user_scraper.py
utils/: config.py
