[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["Mateusz Grzybowski"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^1.20.0"
torch = "^2.5.1"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
scikit-learn = "^1.6.1"
bs4 = "^0.0.2"
requests = "^2.32.3"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
