[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["Mateusz Grzybowski"]
readme = "README.md"
packages = [
    {include = "etl", from = "src"},
    {include = "api", from = "src"},
    {include = "model", from = "src"},
    {include = "utils", from = "src"},
    {include = "schemas", from = "src"},
    {include = "settings.py", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.20.0"
torch = "^2.5.1"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
scikit-learn = "^1.6.1"
bs4 = "^0.0.2"
requests = "^2.32.3"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
asyncio = "^3.4.3"
pathlib = "^1.0.1"
typer = "^0.15.1"
pytest = "^8.3.4"
aiolimiter = "^1.2.1"
tenacity = "^9.0.0"
pytest-xdist = "^3.6.1"
pydantic-settings = "^2.8.1"
pydantic = "^2.11.7"
playwright = "^1.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
