[project]
name = "movie-recommender"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.7",
    "uvicorn>=0.34.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.8.1",
]

[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["Mateusz Grzybowski"]
readme = "README.md"
packages = [
    {include = "etl", from = "src"},
    {include = "api", from = "src"},
    {include = "model", from = "src"},
    {include = "utils", from = "src"},
    {include = "schemas", from = "src"},
    {include = "settings.py", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.8.1"

[tool.poetry.group.ml.dependencies]
torch = "^2.5.1"
scikit-learn = "^1.6.1"
polars = "^1.20.0"
dataframely = "^2.3.1"

[tool.poetry.group.scraping.dependencies]
bs4 = "^0.0.2"
requests = "^2.32.3"
httpx = "^0.28.1"
aiolimiter = "^1.2.1"
tenacity = "^9.0.0"
playwright = "^1.55.0"

[tool.poetry.group.db.dependencies]
psycopg2 = "^2.9.11"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.cli.dependencies]
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^1.2.0"
pytest-docker = "^3.2.3"
pre-commit = "^4.3.0"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
